src/main/java/com/example/pedidos/infra/errors/ClientNotFound.java
package com.example.pedidos.infra.errors;

public class ClientNotFound extends RuntimeException{
    public ClientNotFound(String mesaje){
        super(mesaje);
    }
}
